{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 16,
  "lineage": "0fc09420-74c6-6ca3-1cdb-d9cf7b1b3f38",
  "resources": [
    {
      "module": "module.VPC_Creation",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125330994:network-acl/acl-043076b9446b75b3d",
            "default_network_acl_id": "acl-043076b9446b75b3d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-043076b9446b75b3d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "211125330994",
            "subnet_ids": [],
            "tags": {
              "Name": "root_module_VPC-default"
            },
            "tags_all": {
              "Name": "root_module_VPC-default"
            },
            "vpc_id": "vpc-0132265a5f371f77c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_Creation.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Creation",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125330994:route-table/rtb-004b359a304d2f68f",
            "default_route_table_id": "rtb-004b359a304d2f68f",
            "id": "rtb-004b359a304d2f68f",
            "owner_id": "211125330994",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "root_module_VPC-default"
            },
            "tags_all": {
              "Name": "root_module_VPC-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0132265a5f371f77c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_Creation.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Creation",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125330994:security-group/sg-082d634b16b5b9ca0",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-082d634b16b5b9ca0",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "211125330994",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "root_module_VPC-default"
            },
            "tags_all": {
              "Name": "root_module_VPC-default"
            },
            "vpc_id": "vpc-0132265a5f371f77c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC_Creation.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_Creation",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125330994:vpc/vpc-0132265a5f371f77c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-043076b9446b75b3d",
            "default_route_table_id": "rtb-004b359a304d2f68f",
            "default_security_group_id": "sg-082d634b16b5b9ca0",
            "dhcp_options_id": "dopt-05e3d3ec946d31864",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0132265a5f371f77c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-004b359a304d2f68f",
            "owner_id": "211125330994",
            "tags": {
              "Name": "root_module_VPC"
            },
            "tags_all": {
              "Name": "root_module_VPC"
            }
          }
        }
      ]
    }
  ]
}